# warehouse-management

./: .gitignore  ARCHITECTURE_OVERVIEW.md  DI_SYSTEM_VALIDATION_REPORT.md  LICENSE  PRODUCT_SERVICE_REVIEW.md  README.md  SERVICE_COMPARISON.md  docker-compose.yml
services/cpp/contract-validator/: CMakeLists.txt  README.md
services/cpp/contract-validator/cmake/: contract-validator-config.cmake.in
services/cpp/contract-validator/include/contract_validator/: CodeValidator.hpp  ContractReader.hpp  ContractValidator.hpp  CppCodeParser.hpp  Logger.hpp
services/cpp/contract-validator/src/: CodeValidator.cpp  ContractReader.cpp  ContractValidator.cpp  CppCodeParser.cpp  Logger.cpp  validate_contracts_main.cpp
services/cpp/inventory-service/: .gitignore  CMakeLists.txt  Dockerfile  EXCEPTION_HANDLING_IMPROVEMENTS.md  FRAMEWORK_MIGRATION.md  PROJECT_STRUCTURE.md  README.md  claims.json  docker-compose.yml  docker-entrypoint.sh  sqitch.conf  sqitch.plan  view_swagger.sh
services/cpp/inventory-service/config/: .env.example  application.json
services/cpp/inventory-service/contracts/dtos/: InventoryItemDto.json  InventoryListDto.json  InventoryOperationResultDto.json
services/cpp/inventory-service/contracts/endpoints/: AdjustInventoryQuantity.json  AllocateInventory.json  DeallocateInventory.json  GetInventoryById.json  ListInventory.json  ReleaseReservation.json  ReserveInventory.json
services/cpp/inventory-service/contracts/events/: InventoryAdjusted.json  InventoryAllocated.json  InventoryDeallocated.json  InventoryDeleted.json  InventoryReleased.json  InventoryReserved.json
services/cpp/inventory-service/contracts/fulfilments/: InventoryFulfilment.json
services/cpp/inventory-service/contracts/references/: LocationReference.json  ProductReference.json  WarehouseReference.json
services/cpp/inventory-service/contracts/requests/: AdjustQuantityRequest.json  AllocateInventoryRequest.json  DeallocateInventoryRequest.json  ReleaseReservationRequest.json  ReserveInventoryRequest.json
services/cpp/inventory-service/docs/: CONSUMER_RESILIENCE_CHECKLIST.md  CONTRACT_BASED_SWAGGER.md  CONTRACT_VALIDATION.md  EVENT_CONSUMPTION_ARCHITECTURE.md  EVENT_DISTRIBUTION_PATTERNS.md  MULTI_SERVICE_CONSUMPTION_SUMMARY.md  MULTI_SERVICE_EVENT_FLOW.md  SESSION_SUMMARY.md  SWAGGER_EXAMPLES.md
services/cpp/inventory-service/include/inventory/: Application.hpp  Server.hpp
services/cpp/inventory-service/migrations/: 001_init.sql
services/cpp/inventory-service/migrations/deploy/: 001_initial_schema.sql  002_add_product_cache.sql
services/cpp/inventory-service/migrations/revert/: 001_initial_schema.sql  002_add_product_cache.sql
services/cpp/inventory-service/migrations/verify/: 001_initial_schema.sql  002_add_product_cache.sql
services/cpp/inventory-service/seed/: inventory_seed.sql
services/cpp/inventory-service/src/: Application.cpp  STUBS.md  Server.cpp  main.cpp  validate_contracts.cpp
services/cpp/inventory-service/src/controllers/: ClaimsController.cpp  HealthController.cpp  InventoryController.cpp  SwaggerController.cpp
services/cpp/inventory-service/src/dtos/: ErrorDto.cpp  InventoryItemDto.cpp  InventoryListDto.cpp  InventoryOperationResultDto.cpp
services/cpp/inventory-service/src/handlers/: ProductEventHandler.cpp
services/cpp/inventory-service/src/models/: Inventory.cpp
services/cpp/inventory-service/src/repositories/: InventoryRepository.cpp
services/cpp/inventory-service/src/services/: InventoryService.cpp
services/cpp/inventory-service/src/utils/: Auth.cpp  Config.cpp  ContractReader.cpp  Database.cpp  DtoMapper.cpp  JsonValidator.cpp  Logger.cpp  RabbitMqMessageBus.cpp  RabbitMqMessageConsumer.cpp  SwaggerGenerator.cpp
services/cpp/inventory-service/tests/: AuthTests.cpp  CMakeLists.txt  ClaimsControllerTests.cpp  ContractReaderTests.cpp  ContractValidatorTests.cpp  CppCodeParserTests.cpp  DtoMapperTests.cpp  HttpIntegrationTests.cpp  InventoryRepositoryTests.cpp  InventoryServiceBusTests.cpp  InventoryTests.cpp  RabbitMqIntegrationTests.cpp  RoutingTests.cpp  test_main.cpp
services/cpp/order-service/: CMakeLists.txt  Dockerfile  PROJECT_STRUCTURE.md  README.md  claims.json  docker-compose.yml  docker-entrypoint.sh  sqitch.conf  sqitch.plan
services/cpp/order-service/config/: application.json
services/cpp/order-service/contracts/dtos/: OrderDto.json  OrderListDto.json
services/cpp/order-service/contracts/endpoints/: CancelOrder.json  CreateOrder.json  (+3 more)
services/cpp/order-service/src/: Application.cpp  Server.cpp  main.cpp
services/cpp/order-service/tests/: CMakeLists.txt  DtoMapperTests.cpp  HttpIntegrationTests.cpp
services/cpp/product-service/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PROJECT_STRUCTURE.md  README.md  claims.json  docker-compose.yml  docker-entrypoint.sh  sqitch.conf  sqitch.plan
services/cpp/product-service/config/: application.json
services/cpp/product-service/src/: Application.cpp  Server.cpp  main.cpp
services/cpp/product-service/tests/: DtoMapperTests.cpp  ProductTests.cpp
services/cpp/shared/contract-plugin/: CMakeLists.txt  INTEGRATION_EXAMPLES.md  README.md  SWAGGER_SERVICE_EXTRACTION.md  TESTING_GUIDE.md
services/cpp/shared/http-framework/: ARCHITECTURE.md  CMakeLists.txt  DI_AND_PLUGIN_DESIGN.md  MIGRATION_GUIDE.md  ORIGINAL_PHASE_5_COMPLETE.md  PHASES_1_5_COMPLETE.md  PHASE_4_NAMESPACING.md  PHASE_5_COMPLETE.md  PHASE_5_ROUTE_VALIDATION.md  QUICK_REFERENCE.md  README.md  SUMMARY.md
services/cpp/shared/warehouse-messaging/: CMakeLists.txt  README.md
services/cpp/warehouse-service/: .gitignore  CMakeLists.txt  Dockerfile  PROJECT_STRUCTURE.md  README.md  claims.json  docker-compose.yml  docker-entrypoint.sh  sqitch.conf  sqitch.plan
services/cpp/warehouse-service/config/: .env.example
services/cpp/warehouse-service/migrations/: 001_init.sql
services/cpp/warehouse-service/src/: Application.cpp  STUBS.md  Server.cpp  main.cpp
services/cpp/warehouse-service/tests/: CMakeLists.txt  DtoMapperTests.cpp  HttpIntegrationTests.cpp  LocationTests.cpp  WarehouseTests.cpp  test_main.cpp
(+361 files in other folders)
